# KRONOS

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
kronos/: __init__.py  inference.py  vision_transformer.py
tests/: test_kronos_model.py
tutorials/: 1 - Data-Download-And-Preprocessing.ipynb  1 - How-to-get-marker-metadat-file.ipynb  2 - Cell-phenotyping copy.ipynb  2 - Cell-phenotyping.ipynb  3 - Patch-phenotyping.ipynb  4 - Region-and-artifact-detection.ipynb  4 - Unsupervised-tissue-phenotyping.ipynb  5 - Unsupervised-tissue-phenotyping.ipynb  6 - Tissue-search.ipynb  7 - Patient-stratification.ipynb
tutorials/utils/: PatchExtraction_FeatureExtraction_h5ad.py  __init__.py  cell_phenotyping.py  chl_dataset_prep.py  crc_dataset_prep.py  marker_metadata.py  patch_phenotyping.py  patient_stratification.py  region_artifact_detection.py
